feat(ci.yml): update build command to use Hvigor for HAP assembly
The build command in the CI workflow has been updated to use Hvigor to assemble the HAP with the mode set to module and product set to default. This change ensures a more efficient and optimized build process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: ./node_modules/.bin/hvigor --mode module -p product=default assembleHap
 
       - name: Test
         run: npm test
