chore(ci): modify workflow file for adding HarmonyOS SDK installation
- Added a step to get the latest release information and extract the URL for the required asset.
- Downloaded and unzipped the release asset and made it executable.
- Added a step to install the HarmonyOS SDK with the necessary toolchains.
- The workflow file was modified to include these steps.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,32 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Get Release Assets
+        id: get_assets
+        run: |
+          # 获取 release 的信息
+          RELEASE_JSON=$(curl -s -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/harmonyos-dev/hos-sdk/releases/latest)
+          
+          # 从 release 的信息中提取需要的 asset URL
+          ASSET_URL=$(echo "$RELEASE_JSON" | jq -r '.assets[] | select(.name | test("commandline-tools-linux-2.0.0.2.zip")) | .browser_download_url')
+          
+          # 输出 asset URL
+          echo "Asset URL: $ASSET_URL"
+          
+          # 下载 release asset
+          curl -LJO "$ASSET_URL"
+
+      - name: Unzip Release Assets
+        run: unzip -o commandline-tools-linux-2.0.0.2.zip
+
+      - name: Install HarmonyOS SDK
+        run: ｜
+          # chmod +x commandline-tools-linux-
+          chmod +x command-line-tools/sdkmanager/bin/sdkmgr
+          
+          # 安装 HarmonyOS SDK
+          command-line-tools/sdkmanager/bin/sdkmgr install toolchains:9 OpenHarmony/toolchains:9 --accept-license
+
       - name: Install dependencies
         run: npm ci
 
