chore(ci): modify unzip command in ci workflow
Update the unzip command in the CI workflow to properly decompress the commandline tools zip file. This ensures correct installation of the HarmonyOS SDK.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
           curl -LJO "$ASSET_URL"
 
       - name: Unzip Release Assets
-        run: unzip -o commandline-tools-linux-2.0.0.2.zip
+        run: |
+          unzip -o commandline-tools-linux-2.0.0.2.zip
 
       - name: Install HarmonyOS SDK
         run: ｜
