feat(workflow): update ci.yml to unzip command-line-tools directory
The ci.yml workflow file was modified to use the -d flag when unzipping the commandline-tools-linux-2.0.0.2.zip file, allowing it to be unzipped directly into a "command-line-tools" directory. This improves the organization of the project files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           curl -LJO "$ASSET_URL"
       - name: Unzip Release Assets
         run: |
-          unzip commandline-tools-linux-2.0.0.2.zip
+          unzip "commandline-tools-linux-2.0.0.2.zip" -d command-line-tools
 
       - name: Install HarmonyOS SDK
         run: ｜
