chore(ci): update ci workflow to unzip release assets
Update ci.yml file to include a step that unzips the release assets.
This ensures that the required files are extracted and available for use during the CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,13 @@ jobs:
           
           # 下载 release asset
           curl -LJO "$ASSET_URL"
-          
-          # 解压 release asset
-          unzip "commandline-tools-linux-2.0.0.2.zip" -d command-line-tools
+
+      - name: Unzip Release Assets
+        run: |
+          unzip commandline-tools-linux-2.0.0.2.zip
 
       - name: Install HarmonyOS SDK
-        run: ｜
+        run: |
           # chmod +x commandline-tools-linux-
           chmod +x command-line-tools/sdkmanager/bin/sdkmgr
           # 安装 HarmonyOS SDK
