fix(docs): fix formatting and translation errors in documentation
- Modified the file `book-src/harmonyos-github-action.md` to fix formatting and translation errors in the documentation.
- In the `ci.yml` file, added a comment to handle the error "Failed to request url" and adjusted the environment variable `JAVA_TOOL_OPTIONS` to set the country to China.
- The changes ensure improved readability and accuracy in the documentation and address the issue causing the failed request and toolchain installation error.

Co-authored-by: [Author Name] <[authorEmail]>
Signed-off-by: [Co-author Name] <[coauthorEmail]>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,10 @@ jobs:
       - name: Install HarmonyOS SDK
         run: |
           # chmod +x commandline
+          # for handle Failed to request url https://devecostudio-dre.op.hicloud.com/sdkmanager/v5/hos/getSdkList
+          #[                    ]0%  
+          export JAVA_TOOL_OPTIONS="$JAVA_TOOL_OPTIONS -Duser.country=CN"
+          
           chmod +x command-line-tools/sdkmanager/bin/sdkmgr
           # 安装 HarmonyOS SDK
           command-line-tools/sdkmanager/bin/sdkmgr install toolchains:9 OpenHarmony/toolchains:9 --accept-license
