chore(ci): update build command use hwsdk
Update the build command in the CI configuration file to use hwsdk for assembling the Hap module.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,9 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: ./node_modules/.bin/hvigor --mode module -p product=default assembleHap
+        run: |
+          export HOS_SDK_HOME=./hwsdk
+          ./node_modules/.bin/hvigor --mode module -p product=default assembleHap
 
       - name: Test
         run: npm test
