--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,13 @@ jobs:
 
       - name: Build
         run: |
-          export HOS_SDK_HOME=./hwsdk
-          ./node_modules/.bin/hvigor --mode module -p product=default assembleHap
-
-      - name: Test
-        run: npm test
-
+          # for ERROR: Unable to find 'hwsdk.dir' in 'local.properties' or 'HOS_SDK_HOME' in the system environment path.          
+          export HOS_SDK_HOME=hwsdk/
+          ./node_modules/.bin/hvigor --mode module -p product=default assembleHap --no-daemon
+#
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: harmonyos
+#          path: hwsdk/out
+#
