--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     runs-on: macos-latest
 
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v2
 
@@ -63,7 +67,7 @@ jobs:
           ./node_modules/.bin/hvigor --mode module -p product=default assembleHap --no-daemon --accept-license
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: entry-default-unsigned.hap
           path: entry/build/default/outputs/default/entry-default-unsigned.hap
