fix(ci-workflows): fix artifact upload step in ci and cd workflows
- Modify `.github/workflows/ci.yml` to fix upload artifact step.
- Modify `.github/workflows/cd.yml` to use the correct action for uploading assets.
- Update upload configurations for both workflows.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,8 +57,11 @@ jobs:
           command-line-tools/sdkmanager/bin/sdkmgr install toolchains:9 OpenHarmony/toolchains:9 --accept-license
           # get current dir and export to HOS_SDK_HOME
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Create OHPM package.json file
+        run: |
+          npm init -y
+          npm config set @ohos:registry=https://repo.harmonyos.com/npm/
+          npm install @ohos/hvigor @ohos/hvigor-ohos-plugin
 
       - name: Build
         run: |
