--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,17 @@ jobs:
           command-line-tools/sdkmanager/bin/sdkmgr install toolchains:9 OpenHarmony/toolchains:9 --accept-license
           # get current dir and export to HOS_SDK_HOME
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Create OHPM package.json file
+        run: |
+          npm init -y
+          npm config set @ohos:registry=https://repo.harmonyos.com/npm/
+          npm install @ohos/hvigor @ohos/hvigor-ohos-plugin
+
+      - name: Build
+        run: |
+          # for ERROR: Unable to find 'hwsdk.dir' in 'local.properties' or 'HOS_SDK_HOME' in the system environment path.
+          export HOS_SDK_HOME=$(pwd)/hwsdk
+          ./node_modules/.bin/hvigor --mode module -p product=default assembleHap --no-daemon --accept-license
 
       - name: Build
         run: |
